[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=telliot_core
version = attr: telliot_core.__version__
author=Tellor Development Community
author_email=info@tellor.io
description= Telliot is a Python framework for interacting with the decentralized TellorX network.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/tellor-io/telliot-core
license_files = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: System :: Networking
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
license=MIT
keywords=
    oracle
    etherium
    blockchain


[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.9
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    tox
    tox-travis
    eth-brownie
    pymdown-extensions >= 9.5
install_requires =
    click
    PyYAML >= 6.0
    requests
    web3 >= 5.26.0
    clamfig == 0.1.3
    chained-accounts == 0.0.1

[options.package_data]
* = *.csv, *.json

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    telliot-core = telliot_core.cli.main:main
